<resources>
    <string name="app_name">Video Player Using ExoPlayer</string>
    <string name="all_videos">All Videos</string>
    <string name="all_folders">All Folders</string>

    <string name="total_videos">Total Videos:</string>
    <string name="total_folders">Total Folders:</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="feedback">Feedback</string>
    <string name="themes">Themes</string>
    <string name="sort_order">Short Order</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="nav_text">Welcome to World of Entertainment!</string>
    <string name="video_name">Video Name</string>
    <string name="folder_name">Folder Name</string>
    <string name="duration">00:00</string>
    <string name="loading">loading...</string>
    <string name="semicolon">:</string>

</resources>