<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/feed_back_nav_id"
        android:title="@string/feedback"
        android:icon="@drawable/ic_baseline_feedback_24"/>

    <item android:id="@+id/themes_nav_id"
        android:title="@string/themes"
        android:icon="@drawable/ic_baseline_color_lens_24"/>

    <item android:id="@+id/sort_order_nav_id"
        android:title="@string/sort_order"
        android:icon="@drawable/ic_baseline_sort_24"/>

    <item android:id="@+id/about_nav_id"
        android:title="@string/about"
        android:icon="@drawable/ic_baseline_info_24"/>

    <item android:id="@+id/exit_nav_id"
        android:title="@string/exit"
        android:icon="@drawable/ic_baseline_exit_to_app_24"/>
</menu>